# psca

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  abstract.tex  abstract_compile.tex  analysis.py  config.py  download_anes.py  find_vars.py  ordering_test.py  patch_run.py  pilot.py  prompts.py  pyproject.toml  references.bib  requirements.txt  runner.py  sampler.py
.github/workflows/: release.yml
docs/tutorial/: index.html
docs/tutorial-static/: index.html
figures/: pipeline_schematic.tex
notebooks/: psca_tutorial.ipynb  psca_tutorial.py
results/: derived_thresholds.md
src/psca/: __init__.py  analysis.py  cli.py  config.py  prompts.py  runner.py  sampler.py
