[build-system]
requires = ["hatchling>=1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "psca"
description = "Prompt Specification Curve Analysis: multiverse analysis for LLM prompt design."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Jacob Crainic", email = "j.cra@ycrg-labs.org" },
  { name = "Brandon Yee", email = "b.yee@ycrg-labs.org" },
  { name = "Pairie Koh", email = "p.koh@ycrg-labs.org" },
]
keywords = [
  "llm",
  "specification-curve",
  "multiverse-analysis",
  "prompt-engineering",
  "silicon-sampling",
  "robustness",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "openai>=1.0",
  "anthropic>=0.20",
  "python-dotenv>=1.0",
  "tqdm>=4.65",
  "SALib>=1.4",
]

[project.optional-dependencies]
viz  = ["matplotlib>=3.7", "seaborn>=0.12"]
dev  = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]
all  = ["psca[viz,dev,docs]"]

[project.scripts]
psca = "psca.cli:main"

[project.urls]
Homepage      = "https://github.com/YCRG-Labs/psca"
Repository    = "https://github.com/YCRG-Labs/psca"
Issues        = "https://github.com/YCRG-Labs/psca/issues"
Changelog     = "https://github.com/YCRG-Labs/psca/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/psca/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/psca"]

[tool.hatch.build.targets.sdist]
include = ["src/psca", "README.md", "LICENSE", "CHANGELOG.md", "CITATION.cff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
